# do-um

./: .env copy.example  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_pipeline.py  test_tts.py
docs/: WINDOWS_SETUP.md
docs/evaluation/: llm_as_judge_design.md  online_websocket_contract.md  v4_6scenario_model_evaluation_summary.md
evaluation/scenarios/: rag_faq_v1.tsv
scripts/: benchmark_tts.py  extract_vocab.py  test_streaming_client.py
src/: __init__.py  main.py  pipeline.py
src/common/: __init__.py  config.py  error_handlers.py  exceptions.py  logger.py  schemas.py
src/evaluation/: __init__.py  check_api_connections.py  clients.py  env.py  graph.py  loader.py  pricing.py  ragas_client.py  rubrics.py  run_evaluation.py  run_scenarios.py  runner.py  schemas.py  scoring.py  service.py  summarize_run.py
src/evaluation/prompts/: README.md  judge_v1.md  judge_v2.md  judge_v3_light.md  judge_v4_comparative.md
src/llm/: mock.py
src/middleware/: logging.py
src/nlu/: Eval_Queries (2).csv  NLU_OVERVIEW.md  RAG_FAQ.csv  __init__.py  aicc_core_klue.py  aicc_core_system.py  classifier.py  schemas.py  service.py  sllm.py  test_bench.py  test_consistency.py
src/nlu/guardrail/: __init__.py  policy.py  scorer.py
src/nlu/intent/: __init__.py  classifier.py
src/nlu/response/: __init__.py  builder.py
src/nlu/retrieval/: __init__.py  cache.py  index_manager.py  selector.py  vector_store.py
src/stt/: PROJECT_SUMMARY.md  __init__.py  post_process_test.py  post_processor.py  service.py  vad_comparison.py
src/stt/comparison/: final_pipeline_openai_stt.py  final_pipeline_stt.py  nr_comparison.py  pre_processing_optimizer.py  stt_comparison.py  test_openai_api.py  vad_comparison.py
src/stt/comparison/result/: FINAL_STT_BENCHMARK_REPORT.md  OPENAI_STT_ACCURACY_REPORT.md  STT_ACCURACY_REPORT.md  final_nr_evaluation.json  final_openai_stt_accuracy_report.json  final_pipeline_google_stt_result.json  final_pipeline_openai_stt_result.json  final_stt_accuracy_report.json  final_stt_evaluation.json  final_vad_evaluation.json  nr_metrics_latest.json  preprocessing_optimization_report.json  stt_metrics_latest.json  stt_result_20260422_174532.json  vad_metrics_latest.json  wer_evaluation_report_143657.json  wer_evaluation_report_144105.json
src/stt/evaluation/: VAD_COMPARISON_REPORT.md  nr_evaluator.py  report_generator.py  service.py  stt_evaluator.py  vad_evaluator.py  wer_evaluator.py
src/stt/streaming/: mic_stream.py  pipeline.py  vocabulary.py  websocket_stream.py
src/stt/temp/optimizer/: noise.prof
src/tts/: __init__.py  azure.py  base.py  factory.py  google.py  naver.py  openai.py  service.py  streamlit_tts_app.py
src/workflow/: WORKFLOW_HANDOFF.md  __init__.py  context_builder.py  formatter.py  graph.py  multi_llm.py  online_evaluation.py  prompt.py  run_workflow.py  semantic_cache.py
tests/: test_full_pipeline.py
tests/evaluation/: test_clients.py  test_env.py  test_eval_graph.py  test_eval_runner.py  test_loader.py  test_pricing.py  test_ragas_client.py  test_run_evaluation.py  test_run_scenarios.py  test_scenario_files.py  test_scoring.py  test_summarize_run.py
tests/workflow/: test_formatter.py  test_online_evaluation.py  test_routing.py
