[project]
name = "aicc-tts-app"
version = "0.1.0"
description = "A Streamlit-based TTS Comparison App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "azure-cognitiveservices-speech>=1.49.1",
    "pydantic>=2.13.3",
    "cachetools>=7.0.6",
    "loguru>=0.7.3",
    "google-cloud-texttospeech>=2.36.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.45.0",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/tts", "src/middleware", "src/llm", "src/main.py"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
pythonVersion = "3.11"

[[tool.pyright.executionEnvironments]]
root = "src"
